# internal/server/server.go
@@ -54,6 +54,7 @@ func New() *fiber.App {
 	account.Get("/me", api.GetAccountMe)
 	account.Get("/settings", api.GetAccountSettings)
 	account.Post("/account/reset-api-key", api.ResetAPIKey)
+	account.Post("/account/change-password", api.ChangePassword)
 
 	return app
 }
